<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>





        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:maxLines="1"
                android:id="@+id/signup_txt_username"
                android:drawableLeft="@drawable/profile"
                android:drawablePadding="18dp"
                android:paddingLeft="0dp"
                android:hint="Username"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:id="@+id/signup_txt_password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/pin"
                android:drawablePadding="18dp"
                android:paddingLeft="0dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/signup_btn_signup"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Register"
            android:backgroundTint="@null"
            android:background="@drawable/rounded_button"/>
        <TextView
            android:id="@+id/signup_txt_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_btn_signup"
            android:layout_margin="20dp"
            android:text="@string/SignUpActivityNote"
            android:textSize="15sp"/>




    </LinearLayout>
</androidx.cardview.widget.CardView>
