<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/signup_txt_headertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUpActivityHeader"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:textAllCaps="true"/>

    <EditText
        android:id="@+id/signup_txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_txt_headertext"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="Username"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="12dp"
        android:paddingLeft="0dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/signup_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_txt_username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/pin"
        android:drawablePadding="12dp"
        android:paddingLeft="0dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/signup_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_txt_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#673AB7"
        android:text="@string/SignUpActivityButton"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/signup_txt_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_btn_signup"
        android:layout_margin="20dp"
        android:text="@string/SignUpActivityNote"
        android:textSize="15sp"/>

</RelativeLayout>
